--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -5,3 +5,4 @@
   <input type="password" name="password" placeholder="password" />
   <button type="submit">Login</button>
 </form>
+<span>{{ .error }}</span>
