--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -5,4 +5,6 @@
   <input type="password" name="password" placeholder="password" />
   <button type="submit">Login</button>
 </form>
+{{ if .error }}
 <span>{{ .error }}</span>
+{{ end }}
