fix: export products

--- a/templates/pages/products.html
+++ b/templates/pages/products.html
@@ -1,4 +1,4 @@
-{{ template "layout" }} {{ if .href }}
+{{ template "layout" }} {{ if .filepath }}
 <a href="/{{ .filepath }}" download>Export</a>
 
 {{ end }}
