feat: admin login layout

--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -1,14 +1,13 @@
+{{ define "layout" }}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Admnin Panel</title>
   </head>
-  <body>
-    {{ define "layout" }}
-    <h1>Admin Panel</h1>
-    {{ end }}
-  </body>
+  <body class="bg-gray-100"></body>
 </html>
+{{ end }}
