--- a/templates/pages/products.html
+++ b/templates/pages/products.html
@@ -1,13 +1,34 @@
-{{ template "layout" }} {{ if .filepath }}
-<a href="/{{ .filepath }}" download>Export</a>
+{{ template "main" }} {{ if .filepath }}
+<div class="flex items-center gap-2 mb-12">
+  <a
+    class="border-[0.1rem] border-solid border-blue-700 py-2 px-6 rounded-lg"
+    href="/{{ .filepath }}"
+    download
+    >Export</a
+  >
+  <span class="text-gray-500">*Ekspor data produk dari database ke CSV </span>
+</div>
 
 {{ end }}
-<form action="/admin/products" method="POST" enctype="multipart/form-data">
-  <input type="file" name="file" placeholder="csv file" />
-  <button type="submit">Import</button>
-</form>
-{{ if .error }}
-<span>{{ .error }}</span>
-{{ end }} {{ if .message }}
-<span>{{ .message }}</span>
-{{ end }}
+<div class="flex flex-col items-center">
+  <h4 class="font-bold">Import data CSV ke database</h4>
+  <span class="text-gray-500 text-sm"
+    >*Gunakan format yang sesuai (gunakan tombol "Export" diatas)</span
+  >
+  <form
+    class="mt-4"
+    action="/admin/products"
+    method="POST"
+    enctype="multipart/form-data"
+  >
+    <input type="file" name="file" placeholder="csv file" />
+    <button class="bg-blue-700 text-white py-2 px-8 rounded-xl" type="submit">
+      Import
+    </button>
+  </form>
+  {{ if .error }}
+  <span class="mt-4 text-red-400 font-bold">{{ .error }}</span>
+  {{ end }} {{ if .message }}
+  <span class="mt-4 text-blue-700 font-bold">{{ .message }}</span>
+  {{ end }}
+</div>
