feat: admin product table list

--- a/templates/base/main.html
+++ b/templates/base/main.html
@@ -1,5 +1,5 @@
 {{ define "main" }} {{ template "layout" }}
 <main class="flex">
   {{ template "nav" }}
-  <div class="w-full p-4">{{ end }}</div>
+  <div class="w-full py-4 pl-72 pl-2">{{ end }}</div>
 </main>
