--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -1,5 +1,5 @@
 {{ define "nav" }}
-<nav class="min-h-[100vh] w-64 bg-gray-700 p-4 text-white">
+<nav class="fixed z-50 min-h-[100vh] w-64 bg-gray-700 p-4 text-white">
   <h1 class="font-bold text-xl mb-12">Admin Panel</h1>
   <ul class="flex flex-col gap-4">
     <li>
