feat: admin product search

--- a/templates/pages/products.html
+++ b/templates/pages/products.html
@@ -34,8 +34,44 @@
 </div>
 
 <!-- products table -->
-<div class="relative overflow-x-auto mt-12">
-  <table id="product-table" class="w-auto text-sm text-left text-white">
+<form class="mt-12 mb-4" onsubmit="return onSearch(event)">
+  <div class="relative">
+    <div
+      class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+    >
+      <svg
+        aria-hidden="true"
+        class="w-5 h-5 text-gray-500 dark:text-gray-400"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+        ></path>
+      </svg>
+    </div>
+    <input
+      type="search"
+      id="product-search"
+      class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-700 focus:border-blue-700 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-700 dark:focus:border-blue-700"
+      placeholder="Nama barang..."
+      required
+    />
+    <button
+      type="submit"
+      class="text-white absolute right-2.5 bottom-2.5 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 bg-blue-600 hover:bg-blue-700 focus:ring-blue-800"
+    >
+      Cari
+    </button>
+  </div>
+</form>
+<div class="relative overflow-x-auto w-full">
+  <table id="product-table" class="w-auto text-sm text-left text-white w-full">
     <thead class="text-xs text-white uppercase bg-gray-900">
       <tr>
         <th scope="col" class="px-4 py-2">ID</th>
@@ -153,7 +189,7 @@
   const fetchProducts = (page, query) => {
     fetch(
       `http://localhost:8080/api/products?page=${page}&size=20${
-        query ? `query=${encodeURIComponent(query)}` : ""
+        query ? `&query=${encodeURIComponent(query)}` : ""
       }`
     )
       .then((res) => res.json())
@@ -218,6 +254,12 @@
         <td class="px-4 py-2">${product?.updated_at}</td>
       </tr>`
     tableBody.innerHTML += bodyData
+  }
+
+  const searchField = document.querySelector("#product-search")
+  const onSearch = (e) => {
+    e.preventDefault()
+    fetchProducts(1, searchField.value)
   }
 
   fetchProducts(1)
