--- a/templates/pages/product-detail.html
+++ b/templates/pages/product-detail.html
@@ -13,6 +13,7 @@
       class="bg-gray-50 border border-gray-300 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500"
       placeholder="Product Name"
       value="{{ .id }}"
+      name="product-id"
       required
       readonly
     />
